--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 # Enviroment Variables
 PORT = 8080
-
+CLIENT_URL = 'http://localhost:8080'
 MONGODB_URI=mongodb+srv://TinhBQ:tinhbq@tinhbq.ynbzjfp.mongodb.net/StellarHotel?retryWrites=true&w=majority
