--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "scripts": {
         "start": "node index.js",
         "dev": "nodemon index.js",
-        "debug": "node inspect index.js"
+        "debug": "node inspect index.js",
+        "init": "node seedData.js"
     },
     "author": "",
     "license": "ISC",
@@ -21,6 +22,7 @@
         "express-validator": "^7.0.1",
         "jsonwebtoken": "^9.0.1",
         "mongoose": "^7.3.4",
-        "nodemon": "^3.0.1"
+        "nodemon": "^3.0.1",
+        "validator": "^13.11.0"
     }
 }
