--- a/.env
+++ b/.env
@@ -1,4 +1,10 @@
 # Enviroment Variables
-PORT = 8080
+PORT = 3001
+
 CLIENT_URL = 'http://localhost:8080'
+
 MONGODB_URI=mongodb+srv://TinhBQ:tinhbq@tinhbq.ynbzjfp.mongodb.net/StellarHotel?retryWrites=true&w=majority
+
+SALT_ROUNDS=Intern at Uptech #Your secret phrase
+
+JWT_SECRET=This is a secret key of JWT
