--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ PORT = 8080
 
 CLIENT_URL = 'http://localhost:8080'
 
-MONGODB_URI=mongodb+srv://TinhBQ:tinhbq@tinhbq.ynbzjfp.mongodb.net/StellarHotel_TinhBQ?retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://TinhBQ:tinhbq@tinhbq.ynbzjfp.mongodb.net/StellarHotel_Que?retryWrites=true&w=majority
 
 SALT_ROUNDS=Intern at Uptech #Your secret phrase
 
