--- a/.env
+++ b/.env
@@ -1,7 +1,10 @@
 # Enviroment Variables
-PORT = 8080
+PORT=8080
 
-CLIENT_URL = 'http://localhost:8080'
+NODE_ENV=development
+# NODE_ENV=production
+
+CLIENT_URL='http://localhost:8080'
 
 MONGODB_URI=mongodb+srv://TinhBQ:tinhbq@tinhbq.ynbzjfp.mongodb.net/StellarHotel_TinhBQ?retryWrites=true&w=majority
 
