--- a/package.json
+++ b/package.json
@@ -20,12 +20,15 @@
         "cors": "^2.8.5",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
+        "express-async-handler": "^1.2.0",
         "express-validator": "^7.0.1",
         "jsonwebtoken": "^9.0.1",
         "moment-timezone": "^0.5.43",
         "mongoose": "^7.3.4",
+        "morgan": "^1.10.0",
         "nodemailer": "^6.9.4",
         "nodemon": "^3.0.1",
+        "on-finished": "^2.4.1",
         "validator": "^13.11.0"
     }
 }
