--- a/.env
+++ b/.env
@@ -11,3 +11,7 @@ MONGODB_URI=mongodb+srv://TinhBQ:tinhbq@tinhbq.ynbzjfp.mongodb.net/StellarHotel_
 SALT_ROUNDS=Intern at Uptech #Your secret phrase
 
 JWT_SECRET=This is a secret key of JWT
+
+CLOUD_NAME= drzp9tafy
+API_KEY= 438798656485618
+API_SECRET= aDgdDB6I2Jwldle9OA5A8yYLP0M
