--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.20.2",
         "chalk": "^5.3.0",
+        "cloudinary": "^1.40.0",
         "cors": "^2.8.5",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
@@ -26,8 +27,11 @@
         "moment-timezone": "^0.5.43",
         "mongoose": "^7.3.4",
         "morgan": "^1.10.0",
+        "multer": "^1.4.5-lts.1",
+        "multer-storage-cloudinary": "^4.0.0",
         "nodemailer": "^6.9.4",
         "on-finished": "^2.4.1",
+        "streamifier": "^0.1.1",
         "validator": "^13.11.0"
     },
     "devDependencies": {
