--- a/.env
+++ b/.env
@@ -6,8 +6,9 @@ NODE_ENV=development
 
 CLIENT_URL='http://localhost:8080'
 
-MONGODB_URI=mongodb+srv://TinhBQ:tinhbq@tinhbq.ynbzjfp.mongodb.net/StellarHotel_Que?retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://TinhBQ:tinhbq@tinhbq.ynbzjfp.mongodb.net/StellarHotel_TinhBQ?retryWrites=true&w=majority
 
 SALT_ROUNDS=Intern at Uptech #Your secret phrase
 
-JWT_SECRET=This is a secret key of JWT
+JWT_SECRET_ACCESS=This is a secret key of JWT
+JWT_SECRET_PREFRESH=This is a secret key of JWT
