--- a/.env
+++ b/.env
@@ -16,3 +16,7 @@ API_SECRET= aDgdDB6I2Jwldle9OA5A8yYLP0M
 
 JWT_SECRET_ACCESS=This is a secret key of JWT
 JWT_SECRET_PREFRESH=This is a secret key of JWT
+
+# Role
+ADMIN=452178546@FWED
+CLIENT=78654215*skks
