--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ NODE_ENV=development
 
 CLIENT_URL='http://localhost:8080'
 
-MONGODB_URI=mongodb+srv://TinhBQ:tinhbq@tinhbq.ynbzjfp.mongodb.net/StellarHotel?retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://TinhBQ:tinhbq@tinhbq.ynbzjfp.mongodb.net/StellarHotel_Que?retryWrites=true&w=majority
 
 SALT_ROUNDS=Intern at Uptech #Your secret phrase
 
@@ -20,3 +20,5 @@ JWT_SECRET_PREFRESH=This is a secret key of JWT
 # Role
 ADMIN=452178546@FWED
 CLIENT=78654215*skks
+
+
