--- a/package.json
+++ b/package.json
@@ -27,13 +27,15 @@
         "jsonwebtoken": "^9.0.1",
         "moment-timezone": "^0.5.43",
         "mongoose": "^7.3.4",
+        "mongoose-sequence": "^5.3.1",
         "morgan": "^1.10.0",
         "multer": "^1.4.5-lts.1",
         "multer-storage-cloudinary": "^4.0.0",
         "nodemailer": "^6.9.4",
         "on-finished": "^2.4.1",
         "streamifier": "^0.1.1",
-        "validator": "^13.11.0"
+        "validator": "^13.11.0",
+        "vn-payments": "^1.1.0"
     },
     "devDependencies": {
         "nodemon": "^3.0.1"
