--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ NODE_ENV=development
 
 CLIENT_URL='http://localhost:8080'
 
-MONGODB_URI=mongodb+srv://TinhBQ:tinhbq@tinhbq.ynbzjfp.mongodb.net/StellarHotel?retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://TinhBQ:tinhbq@tinhbq.ynbzjfp.mongodb.net/StellarHotel_Que?retryWrites=true&w=majority
 
 SALT_ROUNDS=Intern at Uptech #Your secret phrase
 
@@ -20,5 +20,11 @@ JWT_SECRET_PREFRESH=This is a secret key of JWT
 # Role
 ADMIN=452178546@FWED
 CLIENT=78654215*skks
+
+TMN_CODE = "9P74Q5DB"
+SECRET_KEY ="WCBCNCNRFRCERDQNTQLCIWCVQSWJOOCQ"
+VNPAY_URL = "https://sandbox.vnpayment.vn/paymentv2/vpcpay.html"
+VNPAY_RETURN_URL = "http://localhost:8080/payment/vnpay_return"
+
 
 
