--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
         "chalk": "^5.3.0",
         "cloudinary": "^1.40.0",
         "cors": "^2.8.5",
+        "crypto-js": "^4.1.1",
+        "date-and-time": "^3.0.2",
+        "dateformat": "^5.0.3",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
         "express-async-handler": "^1.2.0",
@@ -33,8 +36,11 @@
         "multer-storage-cloudinary": "^4.0.0",
         "nodemailer": "^6.9.4",
         "on-finished": "^2.4.1",
+        "qs": "^6.11.2",
+        "sortobject": "^4.16.0",
         "streamifier": "^0.1.1",
-        "validator": "^13.11.0"
+        "validator": "^13.11.0",
+        "vn-payments": "^1.1.0"
     },
     "devDependencies": {
         "nodemon": "^3.0.1"
