--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@ NODE_ENV=development
 CLIENT_URL='http://localhost:8080'
 
 
-MONGODB_URI=mongodb+srv://TinhBQ:tinhbq@tinhbq.ynbzjfp.mongodb.net/StellarHotel?retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://TinhBQ:tinhbq@tinhbq.ynbzjfp.mongodb.net/StellarHotel_Que?retryWrites=true&w=majority
 
 SALT_ROUNDS=Intern at Uptech #Your secret phrase
 
