--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 # Enviroment Variables
 PORT=8080
 
-NODE_ENV=development
-# NODE_ENV=production
+# NODE_ENV=development
+NODE_ENV=production
 
 CLIENT_URL='http://localhost:8080'
 
