update url client

--- a/.env
+++ b/.env
@@ -4,7 +4,8 @@ PORT=8080
  NODE_ENV=development
 #NODE_ENV=production
 
-CLIENT_URL='http://localhost:8080'
+CLIENT_URL_CLIENT=https://fe-stellar.vercel.app
+CLIENT_URL_ADMIN=
 
 MONGODB_URI=mongodb+srv://TinhBQ:tinhbq@tinhbq.ynbzjfp.mongodb.net/StellarHotel?retryWrites=true&w=majority
 
