update url admin

--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ PORT=8080
 #NODE_ENV=production
 
 CLIENT_URL_CLIENT=https://fe-stellar.vercel.app
-CLIENT_URL_ADMIN=
+CLIENT_URL_ADMIN=https://fe-stellar-admin.vercel.app
 
 MONGODB_URI=mongodb+srv://TinhBQ:tinhbq@tinhbq.ynbzjfp.mongodb.net/StellarHotel?retryWrites=true&w=majority
 
